<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8CF"
    tools:context=".ActivityToDoDone">

    <TextView
        android:id="@+id/todoText_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:textSize="22sp"
        android:textStyle="bold|italic"

        android:layout_centerVertical="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"

        />

    <TextView
        android:id = "@+id/done_create_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/todoText_done"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:textColor="#8E8C8C"
        android:textSize="15sp"
        android:text="@string/create_time"

        android:textStyle="bold|italic"
        android:layout_centerInParent="true"

        />

    <TextView
        android:id = "@+id/done_edit_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/done_create_time"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:textColor="#8E8C8C"
        android:textSize="15sp"
        android:text="@string/edit_time"

        android:textStyle="bold|italic"
        android:layout_centerInParent="true"

        />


    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@id/button_not_done"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="30dp"

        android:background="#EFE7A3"

        android:padding="8dp"
        android:text="@string/delete"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button_not_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="30dp"

        android:background="#EFE7A3"

        android:padding="8dp"
        android:text="@string/not_done"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

</RelativeLayout>